# rust-learn

./: README.md
practice/: Cargo.toml
practice/src/: main.rs
prepare_light_dance/practice/: .env  Cargo.toml  docker-compose.yml  schema.graphql
prepare_light_dance/self-practice/week1/ownership/src/: main.rs
prepare_light_dance/self-practice/week1/variables/src/: main.rs
prepare_light_dance/self-practice/week4/ref_practice/: Cargo.toml
prepare_light_dance/self-practice/week4/ref_practice/src/: main.rs
prepare_light_dance/week2_template/src/: main.rs
read_doc/: README.md
self-practice/: README.md
self-practice/week2/loops/src/: main.rs
self-practice/week2/practice/src/: main.rs
self-practice/week4/iterator/src/: main.rs
week2_template/src/: main.rs
week4_template/template1/src/: main.rs
week4_template/template1/src/node/: mod.rs
