[package]
name = "practice"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
axum = "0.6.20"
dotenv = "0.15.0"
futures-util = "0.3.29"
mini-redis = "0.4.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
